--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "2.1.3",
     "typescript": "^3.2.2"
   },
-  "homepage": "https://myusername.github.io/Clicky-Game",
+  "homepage": "https://Kneve327.github.io/Clicky-Game",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
